Mar 15, 2007

  * ADDED: Include peer in session management for better security.
  * ADDED: Broadcast session start/end to allow deletion of derived
    data.

Mar 11, 2007

  * FIXED: http_open/3: send Host: <host>:<port> if port is not 80.

Mar 9, 2007

  * ADDED: reply_html_page/2.  To be documented

  * ADDED: Pass protocol(http/https) into request.

Mar 7, 2007

  * FIXED: handle throw(http_reply(moved_temporary(URL))) properly.

Mar 6, 2007

  * ADDED: final_url option to http_open/3

Mar 5, 2007

  * MODIFIED: debug(header, ...) --> debug(http(header), ...)

  * ADDED: codes([Type], Codes) to http_post_data.

Feb 26, 2007

  * ADDED: Keep connections open on not_modified and replying files.

Feb 9, 2007

  * ADDED: Support for 302 (moved temporary) HTTP replies to the server.

Feb 8, 2007

  * ADDED: Map existence_error(http_location, URL) and 
    permission_error(http_location, access, URL) to appropriate HTTP
    headers.

Feb 2, 2007

  * ADDED: Report status of stopped worker.

Jan 24, 2007

  * ADDED: Support for 303 (see other) HTTP replies to the server.
    Yves Raimond.

Jan 18, 2007

  * ADDED: html_set_options/1 and html_current_option/1 to html_write.pl.
    Allows for changing the document type as well as writing XHTML output
    from the same DCG rules.

Jan 15, 2007

  * ADDED: Redirect support for 301 and 303.  Yves Raimond.

Dec 13, 2006

  * FIXED: avoid passing reply_header option to convert hooks (conflict
    with SGML plugin).

Dec 12, 2006

  * FIXED: Properly close sockets on errors in http_open/3.

Dec 8, 2006

  * ADDED: support for HEAD to http_open/3.

Oct 31, 2006

  * ENHANCED: Documentation

Oct 30, 2006

  * ADDED: Allow for A+B in attribute values.

Sep 18, 2006

  * FIXED: inetd_httpd: set stream encoding to octet to be able to handle
    binary data.  Nicos Angelopoulos.

Aug 21, 2006

  * FIXED: Quote & inside attribute values.

Aug 10, 2006

  * ENHANCED: Time printing in http_header.pl to use format_time/3.  Faster